[tool.poetry]
name = "deltascf-aims"
version = "1.0.4"
description = "Application to test calculation of core holes in FHI-aims"
authors = ["Dylan Morgan <dylan.morgan@warwick.ac.uk>"]
license = "GPL 3"
readme = "README.md"
repository = "https://github.com/maurergroup/deltascf-aims"
packages = [
    { include = "deltascf_aims" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyyaml = "^6.0.2"
click = "^8.1.7"
matplotlib = "^3.9.2"
ase = "3.22.1"
numpy = "^2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = ">=0.7.4,<0.12.0"
ptpython = "^3.0.29"
pyright = "^1.1.389"

[tool.poetry.scripts]
deltascf = 'deltascf_aims.cli:initialise'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.ruff]
# TODO
